[package]
name = "wallet"
version = "0.3.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
rust-version = "1.58.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
ic-cdk = "0.10"
ic-certified-map = "0.3.0"
candid = "0.9.11"
lazy_static = "1.4.0"
libflate = "1"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "1.6.2"
indexmap = "1.7.0"
sha2 = "0.10.2"
regex = "1"

[build-dependencies]
sha2 = "0.10.2"
