[package]
name = "wallet"
version = "0.3.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
rust-version = "1.58.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
base64 = "0.21.0"
ic-cdk = "0.12"
ic-certified-map = "0.4.0"
candid = "0.10"
lazy_static = "1.4.0"
libflate = "2"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.6"
indexmap = "2.2"
sha2 = "0.10.2"
regex = "1"

[build-dependencies]
sha2 = "0.10.2"
