[package]
name = "wallet_admin_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-std = { version = "1.9.0", features = ["tokio1", "attributes"] }
delay = "0.3.0"
ring = "0.16.11"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
#slog = { version = "2.5.2", features = ["nested-values", "max_level_trace", "release_max_level_debug"] }
#slog-term = "2.6.0"
structopt = "0.3"
tempfile = "3.1.0"
tokio = { version = "1.2.0", features = [ "fs" ] }

[dependencies.ic-agent]
version = "0.3.0"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[dependencies.ic-identity-hsm]
version = "0.2.1"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[dependencies.ic-types]
version = "0.1.2"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[dependencies.ic-utils]
version = "0.2.1"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[patch.crates-io.ic-agent]
version = "0.3.0"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[patch.crates-io.ic-identity-hsm]
version = "0.2.1"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[patch.crates-io.ic-types]
version = "0.1.2"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"

[patch.crates-io.ic-utils]
version = "0.2.1"
git = "https://github.com/dfinity/agent-rs.git"
branch = "next"
rev = "5a122b253ead9288f4f591bb1195a0f95c9b5041"
